legend-pure-rust/crates/parser/tests/snapshots/test_type_system__cast_with_relation.snap
---
source: crates/parser/tests/test_type_system.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                Function(
                    FunctionDef {
                        package: Some(
                            Package {
                                name: "my",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 10,
                                    end_line: 2,
                                    end_column: 11,
                                },
                            },
                        ),
                        name: SpannedString {
                            value: "test",
                            source_info: SourceInfo {
                                source: "test.pure",
                                start_line: 2,
                                start_column: 14,
                                end_line: 2,
                                end_column: 17,
                            },
                        },
                        type_parameters: [],
                        multiplicity_parameters: [],
                        parameters: [
                            Parameter {
                                name: "x",
                                type_ref: Some(
                                    TypeReference {
                                        package: None,
                                        name: "Any",
                                        type_arguments: [],
                                        multiplicity_arguments: [],
                                        type_variable_values: [],
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 2,
                                            start_column: 22,
                                            end_line: 2,
                                            end_column: 24,
                                        },
                                    },
                                ),
                                multiplicity: Some(
                                    PureOne,
                                ),
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 19,
                                    end_line: 2,
                                    end_column: 19,
                                },
                            },
                        ],
                        return_type: Type(
                            TypeReference {
                                package: None,
                                name: "Any",
                                type_arguments: [],
                                multiplicity_arguments: [],
                                type_variable_values: [],
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 31,
                                    end_line: 2,
                                    end_column: 33,
                                },
                            },
                        ),
                        return_multiplicity: PureOne,
                        constraints: [],
                        body: [
                            ArrowFunction(
                                ArrowFunction {
                                    target: Variable(
                                        Variable {
                                            name: "x",
                                            source_info: SourceInfo {
                                                source: "test.pure",
                                                start_line: 4,
                                                start_column: 5,
                                                end_line: 4,
                                                end_column: 5,
                                            },
                                        },
                                    ),
                                    function: PackageableElementPtr {
                                        package: None,
                                        name: "cast",
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 4,
                                            start_column: 7,
                                            end_line: 4,
                                            end_column: 8,
                                        },
                                    },
                                    arguments: [
                                        TypeReferenceExpr(
                                            TypeReferenceExpr {
                                                type_ref: Relation(
                                                    RelationType {
                                                        columns: [
                                                            RelationColumn {
                                                                name: "a",
                                                                type_ref: TypeReference {
                                                                    package: None,
                                                                    name: "Integer",
                                                                    type_arguments: [],
                                                                    multiplicity_arguments: [],
                                                                    type_variable_values: [],
                                                                    source_info: SourceInfo {
                                                                        source: "test.pure",
                                                                        start_line: 4,
                                                                        start_column: 27,
                                                                        end_line: 4,
                                                                        end_column: 33,
                                                                    },
                                                                },
                                                                multiplicity: None,
                                                                source_info: SourceInfo {
                                                                    source: "test.pure",
                                                                    start_line: 4,
                                                                    start_column: 25,
                                                                    end_line: 4,
                                                                    end_column: 25,
                                                                },
                                                            },
                                                        ],
                                                        source_info: SourceInfo {
                                                            source: "test.pure",
                                                            start_line: 4,
                                                            start_column: 15,
                                                            end_line: 4,
                                                            end_column: 22,
                                                        },
                                                    },
                                                ),
                                                source_info: SourceInfo {
                                                    source: "test.pure",
                                                    start_line: 4,
                                                    start_column: 14,
                                                    end_line: 4,
                                                    end_column: 14,
                                                },
                                            },
                                        ),
                                    ],
                                    source_info: SourceInfo {
                                        source: "test.pure",
                                        start_line: 4,
                                        start_column: 7,
                                        end_line: 4,
                                        end_column: 8,
                                    },
                                },
                            ),
                        ],
                        stereotypes: [],
                        tagged_values: [],
                        tests: [],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 5,
                            end_column: 1,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
