legend-pure-rust/crates/parser/tests/snapshots/test_type_system__generic_arg_with_subtype_bound_and_wildcard_column.snap
---
source: crates/parser/tests/test_type_system.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                NativeFunction(
                    NativeFunctionDef {
                        package: Some(
                            Package {
                                name: "my",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 17,
                                    end_line: 2,
                                    end_column: 18,
                                },
                            },
                        ),
                        name: SpannedString {
                            value: "eval",
                            source_info: SourceInfo {
                                source: "test.pure",
                                start_line: 2,
                                start_column: 21,
                                end_line: 2,
                                end_column: 24,
                            },
                        },
                        type_parameters: [
                            "Z",
                            "T",
                        ],
                        multiplicity_parameters: [],
                        parameters: [
                            Parameter {
                                name: "col",
                                type_ref: Some(
                                    TypeReference {
                                        package: None,
                                        name: "ColSpec",
                                        type_arguments: [
                                            TypeReference {
                                                package: None,
                                                name: "?",
                                                type_arguments: [
                                                    TypeReference {
                                                        package: None,
                                                        name: "Z",
                                                        type_arguments: [],
                                                        multiplicity_arguments: [],
                                                        type_variable_values: [],
                                                        algebra_ops: [],
                                                        subset_bound: None,
                                                        equal_binding: None,
                                                        source_info: SourceInfo {
                                                            source: "test.pure",
                                                            start_line: 2,
                                                            start_column: 47,
                                                            end_line: 2,
                                                            end_column: 47,
                                                        },
                                                    },
                                                ],
                                                multiplicity_arguments: [],
                                                type_variable_values: [],
                                                algebra_ops: [],
                                                subset_bound: None,
                                                equal_binding: None,
                                                source_info: SourceInfo {
                                                    source: "test.pure",
                                                    start_line: 2,
                                                    start_column: 45,
                                                    end_line: 2,
                                                    end_column: 45,
                                                },
                                            },
                                        ],
                                        multiplicity_arguments: [],
                                        type_variable_values: [],
                                        algebra_ops: [],
                                        subset_bound: None,
                                        equal_binding: None,
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 2,
                                            start_column: 36,
                                            end_line: 2,
                                            end_column: 42,
                                        },
                                    },
                                ),
                                multiplicity: Some(
                                    PureOne,
                                ),
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 31,
                                    end_line: 2,
                                    end_column: 33,
                                },
                            },
                            Parameter {
                                name: "row",
                                type_ref: Some(
                                    TypeReference {
                                        package: None,
                                        name: "T",
                                        type_arguments: [],
                                        multiplicity_arguments: [],
                                        type_variable_values: [],
                                        algebra_ops: [],
                                        subset_bound: None,
                                        equal_binding: None,
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 2,
                                            start_column: 62,
                                            end_line: 2,
                                            end_column: 62,
                                        },
                                    },
                                ),
                                multiplicity: Some(
                                    PureOne,
                                ),
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 57,
                                    end_line: 2,
                                    end_column: 59,
                                },
                            },
                        ],
                        return_type: Type(
                            TypeReference {
                                package: None,
                                name: "Z",
                                type_arguments: [],
                                multiplicity_arguments: [],
                                type_variable_values: [],
                                algebra_ops: [],
                                subset_bound: None,
                                equal_binding: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 69,
                                    end_line: 2,
                                    end_column: 69,
                                },
                            },
                        ),
                        return_multiplicity: ZeroOrOne,
                        stereotypes: [],
                        tagged_values: [],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 2,
                            end_column: 76,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
