legend-pure-rust/crates/parser/tests/snapshots/test_type_system__generics_and_variables.snap
---
source: crates/parser/tests/test_type_system.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                Function(
                    FunctionDef {
                        package: Some(
                            Package {
                                name: "my",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 10,
                                    end_line: 2,
                                    end_column: 11,
                                },
                            },
                        ),
                        name: SpannedString {
                            value: "test",
                            source_info: SourceInfo {
                                source: "test.pure",
                                start_line: 2,
                                start_column: 10,
                                end_line: 2,
                                end_column: 11,
                            },
                        },
                        type_parameters: [],
                        multiplicity_parameters: [],
                        parameters: [
                            Parameter {
                                name: "r",
                                type_ref: Some(
                                    TypeReference {
                                        package: None,
                                        name: "Res",
                                        type_arguments: [
                                            TypeReference {
                                                package: None,
                                                name: "String",
                                                type_arguments: [],
                                                multiplicity_arguments: [],
                                                type_variable_values: [],
                                                source_info: SourceInfo {
                                                    source: "test.pure",
                                                    start_line: 2,
                                                    start_column: 26,
                                                    end_line: 2,
                                                    end_column: 31,
                                                },
                                            },
                                        ],
                                        multiplicity_arguments: [],
                                        type_variable_values: [
                                            Integer(
                                                1,
                                                SourceInfo {
                                                    source: "test.pure",
                                                    start_line: 2,
                                                    start_column: 34,
                                                    end_line: 2,
                                                    end_column: 34,
                                                },
                                            ),
                                            String(
                                                "a",
                                                SourceInfo {
                                                    source: "test.pure",
                                                    start_line: 2,
                                                    start_column: 37,
                                                    end_line: 2,
                                                    end_column: 39,
                                                },
                                            ),
                                        ],
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 2,
                                            start_column: 22,
                                            end_line: 2,
                                            end_column: 24,
                                        },
                                    },
                                ),
                                multiplicity: Some(
                                    PureOne,
                                ),
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 19,
                                    end_line: 2,
                                    end_column: 19,
                                },
                            },
                        ],
                        return_type: Type(
                            TypeReference {
                                package: None,
                                name: "Res",
                                type_arguments: [
                                    TypeReference {
                                        package: None,
                                        name: "String",
                                        type_arguments: [],
                                        multiplicity_arguments: [],
                                        type_variable_values: [],
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 2,
                                            start_column: 51,
                                            end_line: 2,
                                            end_column: 56,
                                        },
                                    },
                                ],
                                multiplicity_arguments: [],
                                type_variable_values: [
                                    Integer(
                                        1,
                                        SourceInfo {
                                            source: "test.pure",
                                            start_line: 2,
                                            start_column: 59,
                                            end_line: 2,
                                            end_column: 59,
                                        },
                                    ),
                                    String(
                                        "a",
                                        SourceInfo {
                                            source: "test.pure",
                                            start_line: 2,
                                            start_column: 62,
                                            end_line: 2,
                                            end_column: 64,
                                        },
                                    ),
                                ],
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 47,
                                    end_line: 2,
                                    end_column: 49,
                                },
                            },
                        ),
                        return_multiplicity: PureOne,
                        body: [
                            Variable(
                                Variable {
                                    name: "r",
                                    source_info: SourceInfo {
                                        source: "test.pure",
                                        start_line: 4,
                                        start_column: 5,
                                        end_line: 4,
                                        end_column: 5,
                                    },
                                },
                            ),
                        ],
                        stereotypes: [],
                        tagged_values: [],
                        tests: [],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 2,
                            end_column: 8,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
